--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,9 +3,9 @@ name: Checks
 
 on: [push]
 
-jobs: 
+jobs:
   test-lint:
-    name: Test and lint
+    name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker Hub
@@ -17,5 +17,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
-      -name: Lint
+      - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
