--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-    command:
+    command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
@@ -29,7 +29,5 @@ services:
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
       
-
-
 volumes:
   dev-db-data:
